--- a/public/theme/default/css/public.css
+++ b/public/theme/default/css/public.css
@@ -1396,16 +1396,15 @@ select {
     width: 500px;
 }
 .row{
-    height:40px;
-    line-height: 40px;
+    height:80px;
+    line-height: 80px;
 }
 
 .row .rowLabel{
-    display: inline-block;
-    *display: inline;
+    display: block;
+    float: left;
     width: 60px;
     text-align: right;
-    *zoom: 1,
 }
 
 .row .rowEle{
@@ -1414,34 +1413,42 @@ select {
     *zoom: 1;
     text-align: left;
     width: 300px;
+    margin-left: 5px;
+    height: 100%;
 }
 
 .upBtn{
-    position: relative;
-    height: 35px;
-    line-height: 35px;
+    height: 40px;
+    line-height: 40px;
 }
 
 .upBtn>.virtualBtn{
-    position: absolute;
-    top: 0px;
-    left: 0px;
-    z-index: 10;
-    background-color: #369;
+    background-color: #0072C6;
     color: #FFF;
-    height: 100%;
+    height: 30px;
     width: 100px;
+    line-height: 30px;
     text-align: center;
     width: 100px;
+    margin-top: 5px; 
+    cursor:pointer;
 }
 
-.upBtn>.fileIpt{
-    position: absolute;
-    top: 0px;
-    left: 0px;
-    z-index: 100;
-    opacity: 0;
+.upBtn>.virtualBtn:hover{
+    background-color: #0095d9;
+}
+
+.progressbox{
     width: 100px;
-    height: 30px;
-    filter: alpha(opacity = 0);
+    height: 3px;
+    border: 1px dotted #666;
+    margin: 10px 0px 10px 0px;
+    background: hsk(0, 0%, 97%);
+    box-shadow: 0 1px 2px hsla(0, 0%, 0%, 0.1) inset;
+}
+
+.progressbox .progressbar{
+    height: 100%;
+    width: 0%;
+    background-color: #049dff;
 }
