--- a/public/theme/default/css/public.css
+++ b/public/theme/default/css/public.css
@@ -1474,11 +1474,25 @@ select {
     height: 55px;
     float: left;
     margin: 2px 2px;
+    cursor: pointer;
 }
 
 .imagepath > .imgpreview > img{
     height: 55px;
     width: 72px;
+}
+
+.imagepath > .imgpreview > .video{
+    height: 55px;
+    width: 72px;
+    line-height: 55px;
+    text-align: center;
+    font-size: 24px;
+    display: block;
+}
+
+.imagepath > .imgpreview > .video:hover{
+    color: #60BBFF;
 }
 
 .fleft{
@@ -1574,4 +1588,34 @@ select {
 .poppreview .poprow .popimg{
     height:60px;
     margin:3px;
+}
+
+/*------------------下拉选择列表--------------*/
+.suggest{
+    position: relative;
+}
+
+.suggest > ul{
+    position: absolute;
+    top: 24px;
+    left: 0px;
+    border: 1px solid #CCC;
+    border-bottom: 0px;
+    border-top: 0px;
+    z-index: 100;
+    width: 100px;
+}
+
+.suggest > ul > li{
+    height: 30px;
+    line-height: 30px;
+    background-color: #FFF;
+    text-align: left;
+    padding: 2px 3px 2px 5px;
+    border-bottom: 1px solid #CCC;
+    cursor: pointer;
+}
+
+.suggest > ul > li.active{
+    background-color: #DDD;
 }
